feat: add cowork get all query filters by status, city & country
